--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>marzenix.pl</title>
+  <style>
+    html, body {
+      margin: 0;
+      background: #111;
+      overflow: hidden;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+    }
+
+    #container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    #character {
+      position: absolute;
+      bottom: 33%; /* baseline in lower 1/3 */
+      left: 50%;
+      transform: translateX(-50%);
+      width: var(--character-size);
+      height: var(--character-size);
+      will-change: transform;
+    }
+
+    @keyframes rotate360 {
+      0% { transform: translateX(-50%) rotate(0deg); }
+      40% { transform: translateX(-50%) rotate(150deg); }
+      60% { transform: translateX(-50%) rotate(210deg); }
+      100% { transform: translateX(-50%) rotate(359deg); }
+    }
+  </style>
+</head>
+<body>
+  <div id="container">
+    <img id="character" src="nie-i-chuj.webp" alt="Wkurwiony Marzenix">
+    <audio id="music" src="marzenix-z-porem.mp3" preload="auto" loop="true"></audio>
+
+    <button id="playButton" style="
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 1em 2em;
+      font-size: 1.5em;
+      z-index: 10;
+      cursor: pointer;
+    ">
+      ▶
+    </button>
+  </div>
+
+  <script>
+    // === CONFIGURABLE CONSTANTS ===
+    const TEMPO_BPM = 55;
+    const BEAT_OFFSET_MS = 500;
+    const CHARACTER_SCALE = 0.2;
+    const JUMP_HEIGHT_VH = 30;
+    const ROTATION_PROBABILITY = 0.2;
+
+    const character = document.getElementById('character');
+    const music = document.getElementById('music');
+    const playButton = document.getElementById('playButton');
+
+    let isPlaying = false;
+    let animationId = null;
+    let nextBeatTime = 0;
+
+    function updateCharacterSize() {
+      const size = window.innerWidth * CHARACTER_SCALE;
+      character.style.setProperty('--character-size', `${size}px`);
+    }
+
+    window.addEventListener('resize', updateCharacterSize);
+    updateCharacterSize();
+
+    function bounceAndMaybeSpin() {
+      const doSpin = Math.random() < ROTATION_PROBABILITY;
+      character.style.transition = 'transform 0.4s ease-out';
+      character.style.transform = `translate(-50%, -${JUMP_HEIGHT_VH}vh) ${doSpin ? 'rotate(360deg)' : ''}`;
+
+      setTimeout(() => {
+        character.style.transform = 'translate(-50%, 0px)';
+      }, 200);
+    }
+
+    function animationLoop(time) {
+      if (!isPlaying) return;
+      if (time >= nextBeatTime) {
+        bounceAndMaybeSpin();
+        nextBeatTime += 60000 / TEMPO_BPM;
+      }
+      animationId = requestAnimationFrame(animationLoop);
+    }
+
+    async function play() {
+      try {
+        await music.play();
+        isPlaying = true;
+        nextBeatTime = performance.now() + BEAT_OFFSET_MS;
+        animationId = requestAnimationFrame(animationLoop);
+        playButton.style.display = 'none';
+      } catch (err) {
+        console.error('Playback failed:', err);
+      }
+    }
+
+    function pause() {
+      music.pause();
+      isPlaying = false;
+      cancelAnimationFrame(animationId);
+      playButton.style.display = 'block';
+    }
+
+    playButton.addEventListener('click', play);
+
+    // Toggle play/pause on background click (but ignore clicks on button)
+    document.body.addEventListener('click', (e) => {
+      if (e.target === playButton) return;
+      if (isPlaying) {
+        pause();
+      }
+    });
+  </script>
+</body>
+</html>
