--- a/index.html
+++ b/index.html
@@ -20,42 +20,39 @@
       position: relative;
       width: 100%;
       height: 100%;
+      perspective: 800px;
     }
 
-    #character {
+    #character, .ghost {
       position: absolute;
       bottom: 20%;
       left: 50%;
-      transform: translateX(-50%);
       width: auto;
       height: var(--character-size);
-      will-change: transform;
+      mix-blend-mode: luminosity;
+      will-change: transform, opacity;
     }
-
-    @keyframes rotate360 {
-      0% { transform: translateX(-50%) rotate(0deg); }
-      100% { transform: translateX(-50%) rotate(359deg); }
-    }
+    #character { z-index: 100; }
+    .ghost { z-index: 99; }
   </style>
 </head>
 <body>
   <div id="container">
     <img id="character" src="umc-umc.jpg" alt="Wkurwiony Marzenix">
-    <audio id="music" src="marzenix-z-porem.mp3" preload="auto" loop="true"></audio>
-
-    <button id="playButton" style="
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 1em 2em;
-      font-size: 1.5em;
-      z-index: 10;
-      cursor: pointer;
-    ">
-      ▶
-    </button>
   </div>
+  <audio id="music" src="marzenix-z-porem.mp3" preload="auto" loop="true"></audio>
+  <button id="playButton" style="
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1em 2em;
+    font-size: 1.5em;
+    z-index: 1000;
+    cursor: pointer;
+  ">
+    ▶
+  </button>
 
   <script>
     // === CONFIGURABLE CONSTANTS ===
@@ -63,10 +60,13 @@
     const BEAT_OFFSET_MS = 0;
     const CHARACTER_SCALE = 0.35;
     const JUMP_HEIGHT_VH = 35;
-    const ROTATION_PROBABILITY = 0.4;
-    const SIDE_MOVEMENT_RANGE = 40; // percentage of screen width
-    const SCALE_BOUNCE_FACTOR = 1; // how much to scale during bounce
+    const SIDE_MOVEMENT_RANGE_VW = 40;
+    const SCALE_BOUNCE_FACTOR = 1.3;
+    const GHOSTS_PER_FRAME = 8;
+    const EASE_FACTOR = 0.20;
+    const MOTION_THRESHOLD = 0.5;
 
+    const container = document.getElementById('container');
     const character = document.getElementById('character');
     const music = document.getElementById('music');
     const playButton = document.getElementById('playButton');
@@ -76,120 +76,93 @@
     let nextBeatTime = 0;
     let beatCount = 0;
 
+    const ghosts = [];
+    for (let i = 0; i < GHOSTS_PER_FRAME; i++) {
+        const ghost = character.cloneNode(true);
+        ghost.classList.add('ghost');
+        ghost.removeAttribute('id');
+        container.appendChild(ghost);
+        ghosts.push(ghost);
+    }
+    const trailElements = [...ghosts, character];
+
+    let currentState = { x: 0, y: 0, scale: 1, rot: 0 };
+    let targetState = { x: 0, y: 0, scale: 1, rot: 0 };
+    let lastFrameState = { ...currentState };
+
     function updateCharacterSize() {
       const size = window.innerHeight * CHARACTER_SCALE;
-      character.style.setProperty('--character-size', `${size}px`);
+      trailElements.forEach(el => { el.style.height = `${size}px`; });
     }
 
-    window.addEventListener('resize', updateCharacterSize);
-    updateCharacterSize();
-
-    function getRandomMove() {
-      if (Math.random() < 0.4 && (beatCount & 1 === 1)) {
-        return () => {};  // High chance of no move on odd beats
-      }
-
-      const moves = [
-        () => bounceOnly(),
-        () => bounceWithSpin(),
-        () => bounceWithSideMove(),
-        () => bounceWithScale(),
-        () => bounceWithDoubleSpin(),
-        () => bounceWithWiggle(),
+    const lerp = (a, b, alpha) => a + (b - a) * alpha;
+    function setAnimationTarget(duration) {
+      setTimeout(() => {
+        targetState.x = 0;
+        targetState.y = 0;
+        targetState.scale = 1;
+        targetState.rot = targetState.rot % 360;
+      }, duration);
+    }
+    function bounceOnly() { targetState.y = -window.innerHeight*(JUMP_HEIGHT_VH/100); setAnimationTarget(400); }
+    function bounceWithSpin() { targetState.y = -window.innerHeight*((JUMP_HEIGHT_VH+5)/100); targetState.rot += (Math.random()>0.5?360:-360); setAnimationTarget(500); }
+    function bounceWithSideMove() { targetState.y = -window.innerHeight*(JUMP_HEIGHT_VH/100); targetState.x = (Math.random()-0.5)*(window.innerWidth*(SIDE_MOVEMENT_RANGE_VW/100)); setAnimationTarget(450); }
+    function bounceWithScale() { targetState.y = -window.innerHeight*((JUMP_HEIGHT_VH-5)/100); targetState.scale = SCALE_BOUNCE_FACTOR; setAnimationTarget(400); }
+    function bounceWithDoubleSpin() { targetState.y = -window.innerHeight*((JUMP_HEIGHT_VH+10)/100); targetState.rot += (Math.random()>0.5?720:-720); setAnimationTarget(600); }
+    function bounceWithWiggle() {
+      const baseRot = targetState.rot;
+      const sequence = [
+        { t: 80, s: { x: -50, y: -100, rot: baseRot + 15 } }, { t: 80, s: { x: 50, y: -200, rot: baseRot - 15 } },
+        { t: 80, s: { x: -50, y: -300, rot: baseRot + 10 } }, { t: 80, s: { x: 0, y: 0, rot: baseRot } },
       ];
-
-      // Higher chance for basic moves, lower for complex ones
+      let delay = 0;
+      sequence.forEach(step => { setTimeout(() => { Object.assign(targetState, step.s); }, delay); delay += step.t; });
+    }
+    function performRandomMove() {
+      const moves = [ bounceOnly, bounceWithSpin, bounceWithSideMove, bounceWithScale, bounceWithDoubleSpin, bounceWithWiggle ];
       const weights = [0.3, 0.25, 0.2, 0.15, 0.07, 0.03];
-      const random = Math.random();
-      let cumulativeWeight = 0;
-
+      let cumulativeWeight = 0, random = Math.random();
       for (let i = 0; i < weights.length; i++) {
         cumulativeWeight += weights[i];
-        if (random <= cumulativeWeight) {
-          return moves[i];
-        }
+        if (random <= cumulativeWeight) { moves[i](); beatCount++; return; }
       }
-      return moves[0]; // fallback
+      moves[0](); beatCount++;
     }
 
-    function bounceOnly() {
-      character.style.transition = 'transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)';
-      character.style.transform = `translate(-50%, -${JUMP_HEIGHT_VH}vh)`;
-
-      setTimeout(() => {
-        character.style.transform = 'translate(-50%, 0px)';
-      }, 200);
-    }
-
-    function bounceWithSpin() {
-      const rotations = Math.random() > 0.5 ? 360 : -360;
-      character.style.transition = 'transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55)';
-      character.style.transform = `translate(-50%, -${JUMP_HEIGHT_VH + 5}vh) rotate(${rotations}deg)`;
-
-      setTimeout(() => {
-        character.style.transform = 'translate(-50%, 0px) rotate(0deg)';
-      }, 250);
-    }
-
-    function bounceWithSideMove() {
-      const sideOffset = (Math.random() - 0.5) * SIDE_MOVEMENT_RANGE;
-      character.style.transition = 'transform 0.45s ease-out';
-      character.style.transform = `translate(calc(-50% + ${sideOffset}vw), -${JUMP_HEIGHT_VH}vh)`;
-
-      setTimeout(() => {
-        character.style.transform = 'translate(-50%, 0px)';
-      }, 225);
-    }
-
-    function bounceWithScale() {
-      const scaleAmount = 1 + SCALE_BOUNCE_FACTOR;
-      character.style.transition = 'transform 0.4s ease-out';
-      character.style.transform = `translate(-50%, -${JUMP_HEIGHT_VH - 5}vh) scale(${scaleAmount})`;
-
-      setTimeout(() => {
-        character.style.transform = 'translate(-50%, 0px) scale(1)';
-      }, 200);
-    }
-
-    function bounceWithDoubleSpin() {
-      character.style.transition = 'transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275)';
-      character.style.transform = `translate(-50%, -${JUMP_HEIGHT_VH + 10}vh) rotate(720deg)`;
-
-      setTimeout(() => {
-        character.style.transform = 'translate(-50%, 0px) rotate(0deg)';
-      }, 300);
-    }
-
-    function bounceWithWiggle() {
-      character.style.transition = 'transform 0.1s ease-in-out';
-
-      // Quick wiggle sequence
-      const wiggleSequence = [
-        () => character.style.transform = `translate(-55%, -10vh) rotate(15deg)`,
-        () => character.style.transform = `translate(-45%, -20vh) rotate(-15deg)`,
-        () => character.style.transform = `translate(-55%, -${JUMP_HEIGHT_VH}vh) rotate(10deg)`,
-        () => character.style.transform = `translate(-45%, -25vh) rotate(-10deg)`,
-        () => character.style.transform = `translate(-50%, 0px) rotate(0deg)`
-      ];
-
-      wiggleSequence.forEach((action, index) => {
-        setTimeout(action, index * 80);
-      });
-    }
-
-    function performRandomMove() {
-      const moveFunction = getRandomMove();
-      moveFunction();
-      beatCount++;
-      console.log(`Beat ${beatCount}`);
-    }
-
-    function animationLoop(time) {
+    function animationLoop(currentTime) {
       if (!isPlaying) return;
-      if (time >= nextBeatTime) {
+
+      if (currentTime >= nextBeatTime) {
         performRandomMove();
         nextBeatTime += 60000 / TEMPO_BPM;
       }
+
+      currentState.x = lerp(currentState.x, targetState.x, EASE_FACTOR);
+      currentState.y = lerp(currentState.y, targetState.y, EASE_FACTOR);
+      currentState.scale = lerp(currentState.scale, targetState.scale, EASE_FACTOR);
+      currentState.rot = lerp(currentState.rot, targetState.rot, EASE_FACTOR);
+
+      const movementDelta = Math.abs(currentState.x - targetState.x) +
+                            Math.abs(currentState.y - targetState.y) +
+                            Math.abs(currentState.scale - targetState.scale) * 50 +
+                            Math.abs(currentState.rot - targetState.rot);
+
+      const isMoving = movementDelta > MOTION_THRESHOLD;
+
+      const sharedOpacity = 1 / (GHOSTS_PER_FRAME + 1);
+      for (let i = 0; i < trailElements.length; i++) {
+        const element = trailElements[i];
+        const fraction = (i + 1) / trailElements.length;
+        const interpX = lerp(lastFrameState.x, currentState.x, fraction);
+        const interpY = lerp(lastFrameState.y, currentState.y, fraction);
+        const interpScale = lerp(lastFrameState.scale, currentState.scale, fraction);
+        const interpRot = lerp(lastFrameState.rot, currentState.rot, fraction);
+
+        element.style.transform = `translateX(-50%) translate(${interpX}px, ${interpY}px) scale(${interpScale}) rotate(${interpRot}deg)`;
+        element.style.opacity = sharedOpacity * 3;
+      }
+
+      lastFrameState = { ...currentState };
       animationId = requestAnimationFrame(animationLoop);
     }
 
@@ -198,29 +171,29 @@
         await music.play();
         isPlaying = true;
         nextBeatTime = performance.now() + BEAT_OFFSET_MS;
+        currentState = { x: 0, y: 0, scale: 1, rot: 0 };
+        targetState = { ...currentState };
+        lastFrameState = { ...currentState };
         animationId = requestAnimationFrame(animationLoop);
         playButton.style.display = 'none';
         beatCount = 0;
-      } catch (err) {
-        console.error('Playback failed:', err);
-      }
+      } catch (err) { console.error('Playback failed:', err); }
     }
-
     function pause() {
       music.pause();
       isPlaying = false;
-      cancelAnimationFrame(animationId);
+      if (animationId) cancelAnimationFrame(animationId);
+      ghosts.forEach(ghost => ghost.style.opacity = '0');
+      character.style.opacity = '1';
       playButton.style.display = 'block';
     }
 
+    window.addEventListener('resize', updateCharacterSize);
+    updateCharacterSize();
     playButton.addEventListener('click', play);
-
-    // Toggle play/pause on background click (but ignore clicks on button)
     document.body.addEventListener('click', (e) => {
       if (e.target === playButton) return;
-      if (isPlaying) {
-        pause();
-      }
+      if (isPlaying) pause();
     });
   </script>
 </body>
